[gd_scene load_steps=22 format=3 uid="uid://ch4j34ltuliln"]

[ext_resource type="Script" uid="uid://dqtmjvrsa18wf" path="res://1Scripts/player.gd" id="1_vb825"]
[ext_resource type="AudioStream" uid="uid://dqu5gehhs22li" path="res://6Audio/HonkOnah.mp3" id="2_bae66"]
[ext_resource type="Texture2D" uid="uid://cqymdj6yuxs86" path="res://4Sprites/UI/HUD1.png" id="4_65n15"]
[ext_resource type="Texture2D" uid="uid://dt0s5cc4eibf" path="res://4Sprites/UI/PlayerFaces.png" id="4_bae66"]
[ext_resource type="Texture2D" uid="uid://bl1fb6ak6jgwi" path="res://4Sprites/UI/AxeSheet.png" id="5_4tkma"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ywxx0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2dtub"]
atlas = ExtResource("4_bae66")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlwuj"]
atlas = ExtResource("4_bae66")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl0t7"]
atlas = ExtResource("4_bae66")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy8ux"]
atlas = ExtResource("4_bae66")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mau7"]
atlas = ExtResource("4_bae66")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bj1p"]
atlas = ExtResource("4_bae66")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qd3c"]
atlas = ExtResource("4_bae66")
region = Rect2(600, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_q4g4l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dtub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlwuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl0t7")
}],
"loop": true,
"name": &"idle",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy8ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mau7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bj1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qd3c")
}],
"loop": false,
"name": &"shoot",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_o3mu2"]
atlas = ExtResource("5_4tkma")
region = Rect2(0, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg6pj"]
atlas = ExtResource("5_4tkma")
region = Rect2(0, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtq6v"]
atlas = ExtResource("5_4tkma")
region = Rect2(500, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pyr7"]
atlas = ExtResource("5_4tkma")
region = Rect2(0, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccib2"]
atlas = ExtResource("5_4tkma")
region = Rect2(500, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kfs8"]
atlas = ExtResource("5_4tkma")
region = Rect2(0, 0, 500, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_p728j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3mu2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg6pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtq6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pyr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccib2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kfs8")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}]

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_vb825")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ywxx0")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0.113585)
target_position = Vector3(0, 0, -3)
collision_mask = 3

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bae66")
bus = &"Sfx"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ClownName" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Hud1" type="Sprite2D" parent="CanvasLayer/ClownName"]
position = Vector2(579.5, 323)
scale = Vector2(0.483668, 0.392086)
texture = ExtResource("4_65n15")

[node name="Label" type="Label" parent="CanvasLayer/ClownName"]
layout_mode = 0
offset_right = 133.0
offset_bottom = 62.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ClownName"]
scale = Vector2(1151, 648)
texture = SubResource("ImageTexture_vb825")

[node name="PlayerFace" type="AnimatedSprite2D" parent="CanvasLayer/ClownName"]
position = Vector2(584, 584)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_q4g4l")
animation = &"idle"
autoplay = "idle"

[node name="GunBase" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/GunBase"]
position = Vector2(19, -282)
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_p728j")
animation = &"shoot"
autoplay = "idle"

[node name="crosshair" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.5
offset_top = -5.5
offset_right = 5.5
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.427451)

[node name="DeathScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -74.0
offset_right = 147.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/DeathScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -46.0
offset_right = 35.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
text = "You Died"

[node name="Restart" type="Button" parent="CanvasLayer/DeathScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 19.0
offset_right = 33.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="CanvasMinigame" type="CanvasLayer" parent="."]
process_priority = 1
layer = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasMinigame"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -379.0
offset_top = -252.0
offset_right = 379.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.737879, 0.18848, 0.457453, 1)

[node name="Minigame" type="Control" parent="CanvasMinigame"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
